--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,8 +1,5 @@
 <h1>New report</h1>
 
-<%= start_form_tag :action => 'create' %>
-  <%= render :partial => 'form' %>
-  <%= submit_tag "Create" %>
-<%= end_form_tag %>
+<%= render 'form' %>
 
-<%= link_to 'Back', :action => 'list' %>
+<%= link_to 'Back', reports_path %>
