--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <style>
     .odd {background-color: #eee;}
     td,th {padding: 4px 8px 4px 8px;}
@@ -5,20 +7,19 @@
 <h1><%=@report.name%> <%="#{@report.param_name} #{params[:param] || @report.param_default}"%></h1>
 
 <%if @records%>
-    <%=@records.num_rows%> records
     <table cellspacing=0>
       <tr>
-      <%while f = @records.fetch_field %>
-        <th><%= f.name %></th>
+      <%@records.fields.each do |f| %>
+        <th><%= f %></th>
       <%end %>
       </tr>
     <%odd = false%>  
-    <%while r = @records.fetch_row %>
-        <%odd = !odd%>
+    <%@records.each do |r| %>
+      <%odd = !odd%>
       <tr>
       <%i = 0%>
       <%r.each do |c| %>
-        <td <%=odd ? "class='odd'" : nil %>><%=lookup(c, r, i, @records.fetch_fields, @lookups)%></td>
+        <td <%=odd ? "class='odd'" : nil %>><%=raw lookup(c, r, i, @records.fields, @lookups)%></td>
         <%i+=1%>
       <%end %>
       </tr>
@@ -28,5 +29,5 @@
 
 <br />
 
-<%= link_to 'Edit', :action => 'edit', :id => @report %> |
-<%= link_to 'Back', :action => 'list' %>
+<%= link_to 'Edit', edit_report_path(@report) %> |
+<%= link_to 'Back', reports_path %>
