--- a/app/views/apps/show_m.html.erb
+++ b/app/views/apps/show_m.html.erb
@@ -24,6 +24,7 @@
         <%if @app%>
             <%app = @app%>
             <%app_name = app.local_name(params[:lr]||session[:code])%>
+            <%@page_title=app_name%>
                 <div style="text-align: center; margin-top: 20px; ">
                     <div class="round_avatar_bg" style="margin: 0 auto; margin-bottom: 12px;"><img src="/images/noname.png" class="round_avatar" /></div>
                     <div style="font-size: 18px; border-bottom: solid 1px #939393;">
