--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
         <META http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <META name="keywords" content="swably, upload, download, share, mobile, review, apps, android APK, peer to peer, P2P share app, review app, cloud, send app, without app store, without play store, free, rate, twitter for apps, apk sharing, swaply, social sharing, aps, review, adroid files, custom "/>    
         <META name="description" content="Swably is the Android app and APK sharing community. Swably gives users options when it comes to quickly and easily sharing mobile apps within a peer to peer android app sharing community. ">
-        <META name="author" content="Dennis Chu - Alex Liao - Taylor Amarel">
+        <META name="author" content="<%=@page_author || 'Dennis Chu - Alex Liao - Taylor Amarel'%>" >
         <%if session[:m] == "_m"%>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         <%end%>
