--- a/app/views/comments/show_m.html.erb
+++ b/app/views/comments/show_m.html.erb
@@ -26,8 +26,7 @@
             <%#user.name="Anthony Bourdain"%>
             <%app = @comment.app%>
             <%app_name = app.local_name(params[:lr]||session[:code])%>
-            <%@page_title="##{app_name} #{@comment.content}"%>
-            <%@page_author=user.display_name%>
+            <%@page_title="#{app_name}"%>
                 <div style="text-align: center; margin-top: 20px; margin-bottom: 15px;">
                     <div style="color: #444; font-size:12px; margin-right: 15px;" class="rfloat"><%=time_ago_in_words @comment.created_at%></div>
                     <div class="round_avatar_bg" style="margin: 0 auto; margin-bottom: 12px;"><img src="<%=user.display_photo.square%>" class="round_avatar" /></div>
