--- a/app/views/default/index.html.erb
+++ b/app/views/default/index.html.erb
@@ -1,3 +1,6 @@
+<%@page_title= 'Swably - Upload, Download, and Share Mobile Apps Socially'%>
+<%@page_description="Swably is the Android app and APK sharing community. Swably gives users options when it comes to quickly and easily sharing mobile apps within a peer to peer android app sharing community. "%>
+<%@page_author='Dennis Chu - Alex Liao - Taylor Amarel'%>
 <style type="text/css">
     html, body { position: absolute; width: 100%; height: 100%; min-height: 430px; }
     #content, #body {height: 100%;}
