--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
         </TITLE>
         <META http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <META name="keywords" content="swably, upload, download, share, mobile, review, apps, android APK, peer to peer, P2P share app, review app, cloud, send app, without app store, without play store, free, rate, twitter for apps, apk sharing, swaply, social sharing, aps, review, adroid files, custom "/>    
-        <META name="description" content="<%=page_description%>">
+        <META name="description" content="<%=@page_description%>">
         <META name="author" content="<%=@page_author%>" >
         <%if session[:m] == "_m"%>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
