--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -35,7 +35,8 @@
             <%@page_title=app_name%>
             <%@page_author=""%>
             <%@page_description=""%>
-            <div class="round_avatar_bg" style="position: relative; margin: 0 auto; z-index: 20;"><img src="/images/noname.png" class="round_avatar" /></div>
+            <%@page_image=app.display_icon.thumbnail%>
+           <div class="round_avatar_bg" style="position: relative; margin: 0 auto; z-index: 20;"><img src="/images/noname.png" class="round_avatar" /></div>
             <div class="rc10" style="background: #000; position: relative; top: -60px; ">
                 <div style="text-align: center; padding-top: 80px; border-bottom: solid 1px #939393;">
                     <div style="font-size: 36px;"><b><%=t :x_posts, count: app.reviews_count %></b></div>
