--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <META name="author" content="<%=@page_author%>" >
         <meta property="og:title" content="<%=@page_title%>"/>
         <meta property="og:description" content="<%=@page_description%>"/>
-        <%img="#{ENV['host']}#{@page_image}"%>
+        <%img="http://#{ENV['host']}#{@page_image}"%>
         <meta property="og:image" content="<%=img%>"/>
 
 
