--- a/app/views/comments/show_m.html.erb
+++ b/app/views/comments/show_m.html.erb
@@ -55,7 +55,7 @@
                 </div>
                 <%end%>
         <%else%>
-            <%=_('No record or deleted')%>
+            <%=('No record or deleted')%>
         <%end%>
         <div style="width: 100%; height: 50px; "></div>
     </div>
