--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-    <HEAD>
+    <HEAD prefix="og: http://ogp.me/ns#">
         <TITLE><%#=[@page_title, 'Swably - Upload, Download, and Share Mobile Apps Socially'].compact.join(' - ')%>
             <%=@page_title%>
         </TITLE>
