implemented icon4share

--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -35,7 +35,7 @@
             <%@page_title=app_name%>
             <%@page_author=""%>
             <%@page_description=""%>
-            <%@page_image=app.display_icon.original%>
+            <%@page_image=app.icon4share%>
            <div class="round_avatar_bg" style="position: relative; margin: 0 auto; z-index: 20;"><img src="/images/noname.png" class="round_avatar" /></div>
             <div class="rc10" style="background: #000; position: relative; top: -60px; ">
                 <div style="text-align: center; padding-top: 80px; border-bottom: solid 1px #939393;">
