change homepage for indiegogo campain

--- a/app/views/default/index.html.erb
+++ b/app/views/default/index.html.erb
@@ -1,33 +1,1 @@
-<%@page_title= 'Swably - Upload, Download, and Share Mobile Apps Socially'%>
-<%@page_description="Swably is the Android app and APK sharing community. Swably gives users options when it comes to quickly and easily sharing mobile apps within a peer to peer android app sharing community. "%>
-<%@page_author='Dennis Chu - Alex Liao - Taylor Amarel'%>
-<style type="text/css">
-    html, body { position: absolute; width: 100%; height: 100%; min-height: 430px; }
-    #content, #body {height: 100%;}
-    img {vertical-align: top;}
-</style>
-<div style="position: absolute; width: 100%; height: 100%; min-height: 768px; ">
-    <div style="position: relative; width: 888px; height: 695px; margin: 20px auto; " >
-        <img src="/images/icon.png" alt="swably_app_sharing_app_logo" id="swably" name="upload_download_comment" style="position: absolute; ">
-        <div style="position: absolute; right: 20px;">
-            <%=t :follow_us_on%>&nbsp;&nbsp;
-            <a href="http://twitter.com/swablyofficial" title="Swably App Sharing" target="_blank"><img src="/images/twitter.png" alt="swably_apk_tiwtter" name="swably_twitter_sharing" id="swably_sharing_apps_on_twitter" /></a>&nbsp;&nbsp;
-            <a href="http://www.facebook.com/Swably" title="Swably Facebook" target="_blank"><img src="/images/facebook.png" alt="swably_facebook_android" name="swably_facebook_sharing" id="swably_sharing_apps_on_facebook" /></a>  
-        </div>
-        <img src="/images/phone.png" alt="swably_nexus_phone_app" name="swably_phone_sharing" id="swably_sharing_apps_on_phone" style="position: absolute; left: 529px; top: 82px;">
-        <img src="/images/slogon_en.png" alt="swap apps with swably" name="swably_4_sharing" id="swably_sharing_apps_on_nexus" style="position: absolute; top: 188px;">
-        <div style="position: absolute; top: 521px;"><%=render(:partial =>  'default/download') %></div>
-    </div>
-    <div style="position: absolute; width: 100%; height: 44px; bottom: 0px; background: #000;">
-        <div style="font-size: 24px; width: 888px;  margin: 10px auto; " >
-            <%=t :slogon%>
-            <div class="rfloat" style="font-size: 16px; margin-top: 3px; margin-right: 20px;">
-                <%=render :partial => 'shared/btn_lang'%>
-                <div class="clear"></div>
-            </div>
-        </div>
-    </div>
-</div>
-<div style="height: 100%; min-width: 1085px; min-height: 768px; overflow: hidden; ">
-    <img width="100%" alt="swably_peer_to_peer_network" id="swably_android_app_sharing" src="/images/back.jpg" name="p2p_peer_to_peer" />
-</div>
+<%=render(:partial =>  'default/index') %>
