--- a/app/views/default/_index.html.erb
+++ b/app/views/default/_index.html.erb
@@ -26,7 +26,7 @@
 			</div>
 			<div style="margin-top: 45px;" align="center">
 				<a href="http://www.indiegogo.com/projects/send-swably-to-san-francisco--2/x/4354736" target="_blank">
-					<img src="/images/sf/indiegogo.png"/>
+					<img src="/images/sf/Indiegogo.png"/>
 				</a>
 			</div>
 			<div style="margin-top: 74px;">
@@ -59,7 +59,7 @@
 			</div>
 			<div style="margin-top: 15px;" align="center">
 				<a href="http://www.indiegogo.com/projects/send-swably-to-san-francisco--2/x/4354736" target="_blank">
-					<img src="/images/sf/indiegogo.png"/>
+					<img src="/images/sf/Indiegogo.png"/>
 				</a>
 			</div>
 			<div style="margin-top: 70px; " align="center" class="color_dark title">
