change to 2014 slogon

--- a/app/views/default/_index_normal.html.erb
+++ b/app/views/default/_index_normal.html.erb
@@ -15,7 +15,7 @@
             <a href="http://www.facebook.com/Swably" title="Swably Facebook" target="_blank"><img src="/images/facebook.png" alt="swably_facebook_android" name="swably_facebook_sharing" id="swably_sharing_apps_on_facebook" /></a>  
         </div>
         <img src="/images/phone.png" alt="swably_nexus_phone_app" name="swably_phone_sharing" id="swably_sharing_apps_on_phone" style="position: absolute; left: 529px; top: 82px;">
-        <img src="/images/slogon_<%=session[:lang]%>.png" alt="swap apps with swably" name="swably_4_sharing" id="swably_sharing_apps_on_nexus" style="position: absolute; top: 188px;">
+        <img src="/images/slogon_2014_<%=session[:lang]%>.png" alt="swap apps with swably" name="swably_4_sharing" id="swably_sharing_apps_on_nexus" style="position: absolute; top: 188px;">
         <div style="position: absolute; top: 521px;"><%=render(:partial =>  'default/download') %></div>
     </div>
     <div style="position: absolute; width: 100%; height: 44px; bottom: 0px; background: #000;">
