--- a/app/views/shared/_download_app.html.erb
+++ b/app/views/shared/_download_app.html.erb
@@ -6,6 +6,6 @@
                 </a>
                 <%else%>
                     <div style="padding:20px;">
-                        <span><%=_('Sorry, downloading is disabled by the developer of the app')%> </span>
+                        <span><%=t(:download_disabled)%> </span>
                     </div>
                 <%end%>
