--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -46,7 +46,7 @@
                     <div class="clear"></div>
                 </div>
                 <div style="padding:20px; border-bottom: solid 1px #939393;">
-                    <div style="color: #888; font-size:36px; line-height: 125%;"><%=@comment.content%></div>
+                    <div style="font-size:36px; line-height: 125%;"><%=@comment.content%></div>
                     <br/><br/>
                     <div style="margin-top: 5px;">
                         <img src="<%=app.display_icon.thumbnail%>" class="icon" style="width: 96px; height: 96px;" />
