implemented new homepage for pc

--- a/app/views/default/_download.html.erb
+++ b/app/views/default/_download.html.erb
@@ -1,9 +1,9 @@
 <%if session[:lang]=='zh'%>
-<a href="http://play.google.com/store/apps/details?id=goofy2.swably.zh" title="Download Swably">
-  <img alt="下载万宝乐" src="/images/get_swably_en.png" />
+<a href="/account/upgrade" title="Download Swably">
+  <img alt="下载万宝乐" src="/images/get_swably_zh.png" />
 </a>
 <%else%>
-<a href="http://play.google.com/store/apps/details?id=goofy2.swably" title="Download Swably">
+<a href="/account/upgrade" title="Download Swably">
   <img alt="Get Swably on Google Play" src="/images/get_swably_en.png" />
 </a>
 <%end%>
