--- a/app/views/default/index_m.html.erb
+++ b/app/views/default/index_m.html.erb
@@ -2,14 +2,12 @@
     html, body { position: absolute; width: 100%; height: 100%; min-height: 430px; }
     #content, #body {height: 100%;}
 </style>
-<div style="position: absolute; width: 100%; height: 100%; min-height: 620px; text-align: center;">
+<div style="position: absolute; width: 100%; height: 100%;  text-align: center;">
+    <div style="font-size: 20px; color: #00a1e9; margin-top:12px; display: none;"><%=t(:swably)%></div>
     <div style="position: absolute; width: 100%; bottom: 0px; ">
-        <img src="/images/icon_m.png" style="width: 70px; margin-bottom: 100px;"/><br/>
-        <img src="/images/logo_<%=session[:lang]%>.png" style="height: 68px; margin-bottom: 120px;"/><br/>
-        <img src="/images/slogon_<%=session[:lang]%>_m.png" style="height: 36px; margin-bottom: 80px;"/><br/>
-    </div>
-    <div style="position: absolute; width: 100%; height: 50px; bottom: 0px; background: #000; text-align: center; padding-top: 15px;">
-        <%=render(:partial =>  'default/download_m') %>
+        <img src="/images/icon.png" style="width: 180px; margin-bottom: 30px;"/>
+        <div style="font-size: 24px;"><%=simple_format(t(:slogon_m))%></div>
+        <div style="margin-top: 120px; margin-bottom: 20px;"><%=render(:partial =>  'default/download') %></div>
     </div>
 </div>
 <div style="height: 100%;  min-height: 620px; overflow: hidden; ">
