--- a/app/views/shared/_download_app.html.erb
+++ b/app/views/shared/_download_app.html.erb
@@ -1,5 +1,5 @@
                 <%if app.enabled%>
-                <a href="<%=app.apk%>#mp.weixin.qq.com" class="btn">
+                <a href="/apps/download/<%=app.id%>#mp.weixin.qq.com" class="btn">
                     <div style="padding:20px;" class="btn" align="center">
                         <img src="/images/download.png" <%if session[:m] == '_m'%>width="60px"<%end%>/>
                     </div>
