fix a request landing page error

--- a/app/views/shared/_download_app.html.erb
+++ b/app/views/shared/_download_app.html.erb
@@ -1,3 +1,4 @@
+            <div  style="border-top: solid 1px #939393;">
                 <%if app.enabled%>
                 <a href="/apps/download/<%=app.id%>#mp.weixin.qq.com" class="btn">
                     <div style="padding:20px;" class="btn" align="center">
@@ -9,3 +10,4 @@
                         <span><%=t(:download_disabled)%> </span>
                     </div>
                 <%end%>
+            </div>
