--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -32,12 +32,14 @@
         <%if @comment%>
             <%user = @comment.user%>
             <%#user.name="Anthony Bourdain"%>
-            <%app = @comment.app%>
-            <%app_name = app.local_name(params[:lr]||session[:code])%>
-            <%@page_title=app_name%>
             <%@page_author=user.display_name%>
             <%@page_description=@comment.content%>
-            <%@page_image=@comment.image ? Photo.new(@comment.image).original : app.icon4share%>
+            <%app = @comment.app%>
+            <%if app%>
+                <%app_name = app.local_name(params[:lr]||session[:code])%>
+                <%@page_title=app_name%>
+            <%end%>
+            <%@page_image=@comment.image ? Photo.new(@comment.image).original : (app ? app.icon4share : "") %>
             <div class="round_avatar_bg" style="position: relative; margin: 0 auto; z-index: 20;"><img src="<%=user.display_photo.square%>" class="round_avatar" /></div>
             <div class="rc10" style="background: #000; position: relative; top: -60px; ">
                 <div style="color: #888; font-size:18px; margin-top: 10px; margin-right: 15px;" class="rfloat"><%=time_ago_in_words @comment.created_at%></div>
@@ -45,21 +47,23 @@
                     <div style="font-size: 36px;"><b><%=user.display_name%></b></div>
                     <div class="clear"></div>
                 </div>
-                <div style="padding:20px; border-bottom: solid 1px #939393;">
+                <div style="padding:20px; ">
                     <div style="font-size:36px; line-height: 125%;"><%=@comment.content%></div>
-                    <br/><br/>
-                    <div style="margin-top: 5px;">
-                        <img src="<%=app.display_icon.thumbnail%>" class="icon" style="width: 96px; height: 96px;" />
-                        <div>
-                            <span style="font-size:36px; line-height: 120%;"><b><%=app_name%></b></span><br/>
-                            <span style="font-size:18px; line-height: 150%; display: none; ">
-                                <%#=_('Size')%> <%#="%.2fMB"%(app[:size]/1024.0/1024.0)%>
-                            </span>
+                    <%if app%>
+                        <br/><br/>
+                        <div style="margin-top: 5px;">
+                            <img src="<%=app.display_icon.thumbnail%>" class="icon" style="width: 96px; height: 96px;" />
+                            <div>
+                                <span style="font-size:36px; line-height: 120%;"><b><%=app_name%></b></span><br/>
+                                <span style="font-size:18px; line-height: 150%; display: none; ">
+                                    <%#=_('Size')%> <%#="%.2fMB"%(app[:size]/1024.0/1024.0)%>
+                                </span>
+                            </div>
+                            <div style="clear:both" ></div>
                         </div>
-                        <div style="clear:both" ></div>
-                    </div>
+                    <%end%>
                 </div>        
-                <%=render(:partial =>  'shared/download_app', :locals => {:app => app}) %>
+                <%=render(:partial =>  'shared/download_app', :locals => {:app => app}) if app%>
             </div>
         <%else%>
             <%=('No record or deleted')%>
