--- a/app/views/comments/show_m.html.erb
+++ b/app/views/comments/show_m.html.erb
@@ -25,29 +25,33 @@
             <%user = @comment.user%>
             <%#user.name="Anthony Bourdain"%>
             <%app = @comment.app%>
-            <%app_name = app.local_name(params[:lr]||session[:code])%>
-            <%@page_title="#{app_name}"%>
+            <%if app%>
+                <%app_name = app.local_name(params[:lr]||session[:code])%>
+                <%@page_title=app_name%>
+            <%end%>
                 <div style="text-align: center; margin-top: 20px; margin-bottom: 15px;">
                     <div style="color: #444; font-size:12px; margin-right: 15px;" class="rfloat"><%=time_ago_in_words @comment.created_at%></div>
                     <div class="round_avatar_bg" style="margin: 0 auto; margin-bottom: 12px;"><img src="<%=user.display_photo.square%>" class="round_avatar" /></div>
                     <div style="font-size: 18px;"><b><%=user.display_name%></b></div>
                     <div class="clear"></div>
                 </div>
-                <div style="padding:15px; border-bottom: solid 1px #939393;">
+                <div style="padding:15px;">
                     <div style="font-size:24px; line-height: 125%;"><%=@comment.content%></div>
-                    <br/>
-                    <div style="margin-top: 5px;">
-                        <img src="<%=app.display_icon.thumbnail%>" class="icon" />
-                        <div style="padding-top: 12px;">
-                            <span style="font-size:18px; line-height: 120%;"><b><%=app_name%></b></span><br/>
-                            <span style="font-size:12px; line-height: 150%; display: none; ">
-                                <%#=_('Size')%> <%#="%.2fMB"%(app[:size]/1024.0/1024.0)%>
-                            </span>
+                    <%if app%>
+                        <br/>
+                        <div style="margin-top: 5px;">
+                            <img src="<%=app.display_icon.thumbnail%>" class="icon" />
+                            <div style="padding-top: 12px;">
+                                <span style="font-size:18px; line-height: 120%;"><b><%=app_name%></b></span><br/>
+                                <span style="font-size:12px; line-height: 150%; display: none; ">
+                                    <%#=_('Size')%> <%#="%.2fMB"%(app[:size]/1024.0/1024.0)%>
+                                </span>
+                            </div>
+                            <div style="clear:both" ></div>
                         </div>
-                        <div style="clear:both" ></div>
-                    </div>
-                </div>        
-                <%=render(:partial =>  'shared/download_app', :locals => {:app => app}) %>
+                    <%end%>
+                    </div>        
+                    <%=render(:partial =>  'shared/download_app', :locals => {:app => app})  if app%>
                 <%if @comment.image%>
                 <br/>
                 <div style="padding: 8px;">
