--- a/app/views/default/_index_normal.html.erb
+++ b/app/views/default/_index_normal.html.erb
@@ -8,9 +8,11 @@
 </style>
 <div style="position: absolute; width: 100%; height: 100%; min-height: 768px; ">
     <div style="position: absolute; top: 15px; left: 15px; color: #00a1e9; font-size: 40px; font-weight: bold;"><%=t :swably%></div>
-    <div style="position: relative; width: 460px;  margin: 20px auto; " align="center" >
+    <div style="position: relative; width: 800px;  margin: 20px auto; " align="center" >
         <img src="/images/icon.png" alt="swably_app_sharing_app_logo" id="swably" name="upload_download_comment" style="margin-top: 90px;">
         <div style="margin-top: 50px; font-weight: bold; font-size: 36px;"><%=t(:slogon)%></div>
+        <div style="margin-top: 20px; font-weight: bold; font-size: 24px;"><%=t(:subtitle1)%></div>
+        <div style="margin-top: 10px; font-weight: bold; font-size: 24px;"><%=t(:subtitle2)%></div>
         <div style="margin-top: 70px;"><%=render(:partial =>  'default/download') %></div>
     </div>
     <div style="position: absolute; width: 100%; height: 70px; bottom: 0px; background: #292929;">
