--- a/app/views/default/index_m.html.erb
+++ b/app/views/default/index_m.html.erb
@@ -6,7 +6,9 @@
     <div style="font-size: 20px; color: #00a1e9; margin-top:12px; display: none;"><%=t(:swably)%></div>
     <div style="position: absolute; width: 100%; bottom: 0px; ">
         <img src="/images/icon.png" style="width: 180px; margin-bottom: 30px;"/>
-        <div style="font-size: 24px;"><%=simple_format(t(:slogon_m))%></div>
+        <div style="font-weight: bold; font-size: 24px;"><%=t(:slogon)%></div>
+        <div style="margin-top: 15px; font-weight: bold; font-size: 18px;"><%=t(:subtitle1)%></div>
+        <div style="margin-top: 0px; font-weight: bold; font-size: 18px;"><%=t(:subtitle2)%></div>
         <div style="margin-top: 120px; margin-bottom: 20px;"><%=render(:partial =>  'default/download') %></div>
     </div>
 </div>
