--- a/app/views/shared/_download_app.html.erb
+++ b/app/views/shared/_download_app.html.erb
@@ -1,6 +1,7 @@
             <div  style="border-top: solid 1px #939393;">
                 <%if app.enabled%>
-                <a href="/apps/download/<%=app.id%>#mp.weixin.qq.com" class="btn">
+                <%review_id = review_id%>
+                <a href="/apps/download/<%=app.id%>?review_id=<%=review_id%>#mp.weixin.qq.com" class="btn">
                     <div style="padding:20px;" class="btn" align="center">
                         <img src="/images/download.png" <%if session[:m] == '_m'%>width="60px"<%end%>/>
                     </div>
