--- a/app/views/shared/_download_app.html.erb
+++ b/app/views/shared/_download_app.html.erb
@@ -7,7 +7,7 @@
                         </div>
                     </a>
                     <%if session[:in_weixin] %>
-                        <div style="padding: 0 20px; line-height: 125%;"><%=t(:download_in_weixin)%></div>
+                        <div style="padding: 0 20px; color: #888; line-height: 125%;"><%=t(:download_in_weixin)%></div>
                     <%end%>               
                 <%else%>
                     <div style="padding:20px;">
